WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
26012
Chromium doesn't handle -webkit-border-image correctly.
https://bugs.webkit.org/show_bug.cgi?id=26012
Summary
Chromium doesn't handle -webkit-border-image correctly.
Stephen White
Reported
2009-05-25 12:16:55 PDT
Chromium (skia) doesn't do -webkit-border-image correctly when the border image is 1 pixel wide or high, since it doesn't like negative width/height source rects in Image::drawPattern(). CoreGraphics will happily draw it in this case. See bug
http://crbug.com/6167
.
Attachments
Fix for Chromium Image::drawPattern() issue.
(2.49 KB, patch)
2009-05-25 12:20 PDT
,
Stephen White
dglazkov
: review+
Details
Formatted Diff
Diff
Fix ChangeLog
(2.54 KB, patch)
2009-05-26 08:15 PDT
,
Stephen White
dglazkov
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Stephen White
Comment 1
2009-05-25 12:20:29 PDT
Created
attachment 30658
[details]
Fix for Chromium Image::drawPattern() issue.
Mark Rowe (bdash)
Comment 2
2009-05-25 14:37:22 PDT
Putting Brett as the reviewer doesn't make much sense as Brett is not a WebKit reviewer. We don't typically nominate a specific reviewer anyway.
Stephen White
Comment 3
2009-05-26 07:42:02 PDT
(In reply to
comment #2
)
> Putting Brett as the reviewer doesn't make much sense as Brett is not a WebKit > reviewer.
Whoops, will fix.
> We don't typically nominate a specific reviewer anyway.
In my experience, patches tend to get ignored if you don't.
Dimitri Glazkov (Google)
Comment 4
2009-05-26 08:01:59 PDT
Comment on
attachment 30658
[details]
Fix for Chromium Image::drawPattern() issue. Thanks for fixing this! Don't forget a bug URL in the ChangeLog.
Stephen White
Comment 5
2009-05-26 08:15:30 PDT
Created
attachment 30669
[details]
Fix ChangeLog
Dimitri Glazkov (Google)
Comment 6
2009-05-26 09:00:56 PDT
Landed as
http://trac.webkit.org/changeset/44150
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug