2009-05-26  Stephen White  <senorblanco@chromium.org>

Reviewed by Dimitri Glazkov.

        https://bugs.webkit.org/show_bug.cgi?id=26012

        Fix the Skia path to normalize the given source rect when
        drawing patterns, so it accepts negative width/height (as CG does).
        Fixes Chromium bug http://www.crbug.com/6167.
        * platform/graphics/skia/ImageSkia.cpp:
        (WebCore::Image::drawPattern):

Canonical link: https://commits.webkit.org/36010@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44150 268f45cc-cd09-0410-ab3c-d52691b4dbfc